db-stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-stateful-set
spec:
  selector:
    matchLabels:
      app: postgres-stateful-set
  serviceName: 'postgres-db'
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres-stateful-set
    spec:
      containers:
        - name: postgredb
          image: postgres:11
          ports:
            - containerPort: 5432
              name: postgresdb
          volumeMounts:
            - name: postgredb
              mountPath: /var/lib/postgresql/data
              subPath: postgres
  volumeClaimTemplates:
    - metadata:
        name: postgredb
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
