app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-app-service
spec:
  selector:
    app: health-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
